# hologram

./: LICENSE  README.md
applications/: README.md
examples/: README.md
examples/tasks/Qt6/Tasks/: CMakeLists.txt  README.md  resources.qrc
examples/tasks/Qt6/Tasks/assets/: style.qss
examples/tasks/Qt6/Tasks/src/: Functions.h  Task.cpp  Task.h  TaskModel.cpp  TaskModel.h  TaskProvider.cpp  TaskProvider.h  main.cpp  main.qml
examples/tasks/Qt6/Tasks/src/pages/: EditTaskPage.qml  NewTaskPage.qml  TaskListPage.qml
examples/tasks/Qt6/Tasks/src/widgets/: ScaffoldWithAppBar.qml  TaskTile.qml
hologram-bare/: 1_CLONE_SETUP.md  2_ACCESS_SETUP.md  3_DATA_SETUP.md  4_HTTPS_SETUP.md  7_DOCUMENT_ROOT_TUNING.md  README.md
hologram-caas/: 1_SYSTEM_SETUP.md  2_ACCESS_WITH_GREATER_SECURITY.md  3_DOCKER_SETUP.md  5_DEVTOOLS_AND_LIBRARIES.md  6_GO_SETUP.md  7_NODE_SETUP.md  KUBERNETES_SETUP.md  README.md
hologram-cpp/: 1_CLONE_SETUP.md  3_DATA_SETUP.md  4_HTTPS_SETUP.md  5_DEVELOPMENT_ENVIRONMENT_SETUP.md  README.md
hologram-dp/: 1_CLONE_SETUP.md  2_HTTPS_SETUP.md  3_DATA_SETUP.md  4_CMS_SETUP.md
hologram-eaas/: REAADME.md  README.md
hologram-kind/: .gitignore  1_SYSTEM_SETUP.md  2_ACCESS_WITH_GREATER_SECURITY.md  3_DOCKER_SETUP.md  4_GO_SETUP.md  5_KUBECTL_SETUP.md  6_KIND_SETUP.md  7_CLUSTER_EXAMPLES.md  7_SAMPLE_CLUSTER.md  9_NFS_SETUP.md  README.md
hologram-llm/: 1_AFTER_INSTALLATION.md  2_IMPROVE_SECURITY.md  3_ENVIRONMENT_SETUP.md  6_PYTHON3.13_SETUP.md  README.md
hologram-mini/: 1_SYSTEM_SETUP.md  2_ACCESS_WITH_GREATER_SECURITY.md  3_DOCKER_SETUP.md  4_MINIKUBE_SETUP.md  README.md
hologram-mis/: 2_ACCESS_WITH_GREATER_SECURITY.md  3_DOCKER_SETUP.md  4_KUBECTL_SETUP.md  5_KIND_SETUP.md  7_GO_SETUP.md  8_NODE_SETUP.md  (+2 more)
(+1972 files in other folders)
